--- a/404.html
+++ b/404.html
@@ -23,22 +23,7 @@
   </style>
 </head>
 <body>
-<h1>Page Not Found</h1>
-<p>The requested page could not be found.</p>
-<p>
-  Go back to the <a href="/">homepage</a>.
-</p>
-<script>
-  // Check if the current URL is a GitHub Pages URL
-  var isGitHubPages = window.location.hostname.includes("github.io");
+<div id="root"></div>
 
-  // Check if the current URL contains a path
-  var hasPath = window.location.pathname !== "/";
-
-  if (isGitHubPages && hasPath) {
-    // Redirect to homepage without reloading the page
-    window.history.pushState({}, "", "/");
-  }
-</script>
 </body>
 </html>
