--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 <!-- End Single Page Apps for GitHub Pages -->
 
 <script type="module" src="/src/main.tsx"></script>
-<script type="module" src="/404.html"></script>
+<!--<script type="module" src="/404.html"></script>-->
 </body>
 </html>
